# GNTP-Tools

./: CMakeLists.txt  LICENSE  Makefile.am  Makefile.msc  Makefile.w32  README.md  _config.yml  build.sh  index.html  index.markdown  test.markdown
_layouts/: default.html
binaries/linux-x32/: gntp-notify  gntp-register
binaries/linux-x64/: gntp-notify  gntp-register
binaries/osx/: gntp-notify  gntp-register  libgrowl.dylib
css/: main.css
docs/: GNTP-v1.0.md  gntp-notify.md  gntp-register.md
headers/: growl.h
man/: gntp-notify.1  gntp-register.1
source/: gntp-notify.c  gntp-register.c  growl.c
